<resources>
    <string name="app_name">TheFinalFinalApp</string>
    <string name="title_new_discovered_devices">New available pancake devices</string>
    <string name="title_saved_devices">Already known pancake devices</string>
    <string name="title_other_devices">Other Bluetooth devices</string>
    <string name="no_devices">No devices found</string>

    <string name="text_no_saved_devices">There are no presaved pancake devices on this phone.</string>
    <string name="prompt_last_connected_device">You can connect to the last used device:</string>
    <string name="prompt_check_known_devices">Or you can check which ones from already known devices are in range.</string>
    <string name="prompt_search_new_devices">You can search for new pancake devices in range.</string>

    <string name="action_connect_last_device">Connect</string>
    <string name="action_check_known_devices">Check known devices</string>
    <string name="action_search_new_devices">Search new devices</string>
    <string name="action_record">Record</string>
    <string name="action_record_active">Recording</string>
    <string name="action_stop">Stop</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_rev">Reverse x1 to x16</string>
    <string name="action_fvd">Forward x1 to x16</string>
    <string name="action_gain_up">More Gain</string>
    <string name="action_gain_down">Less Gain</string>
    <string name="action_prev_index">Previous Index</string>
    <string name="action_next_index">Next Index</string>
    <string name="action_quality_24_48">48kSps</string>
    <string name="action_quality_24_96">96kSps</string>
    <string name="action_quality_24_192">192kSps</string>
    <string name="action_pahntom_on">Phantom On</string>
    <string name="action_pahntom_off">Phantom Off</string>



    <string name="action_clear_db">Clear device cache</string>

    <string name="section_title_rec_options">Recording Options</string>
    <string name="section_title_playback_progress">Playback progress</string>

    <string name="recording_time_left">Recording time left</string>


    <string name="settings_dialog_title">Setting actions</string>
    <string name="action_show_memory_status">View SD card status</string>
    <string name="action_memory_format">Format memory card</string>
    <string name="action_set_time">Set current time</string>
    <string name="action_power_off">Turn off device</string>

    <string name="dialog_format_title">Format Memory Card</string>
    <string name="dialog_format_message">All data will be lost. Are you sure?</string>

    <string name="dialog_poweroff_title">Device power off</string>
    <string name="dialog_poweroff_message">The device will be turned off. You cannot turn it back on remotely. Are you sure?</string>
    <string name="msg_poweroff_progress">Turning off...</string>
    <string name="msg_poweroff_ok">The device is down.</string>

    <string name="msg_formatting_progress">Formatting memory card.\nThis will take a while...</string>
    <string name="msg_formatting_error">Format memory card failed</string>
    <string name="msg_formatting_ok">Memory card formatted</string>

    <string name="dialog_mem_card_status_title">Memory card status</string>

    <string name="memory_card_status_undef">Memory card status is not defined yet</string>
    <string name="memory_card_status_0">Card exists and ready to work</string>
    <string name="memory_card_status_1">A hard error occurred in the low level disk I/O layer</string>
    <string name="memory_card_status_2">The physical drive cannot work</string>
    <string name="memory_card_status_3">Access denied due to prohibited access or directory full</string>
    <string name="memory_card_status_4">The physical drive is write protected</string>
    <string name="memory_card_status_5">There is no valid FAT volume</string>

</resources>
