<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/toolbar" layout="@layout/aaapplication_toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--  The activity content /-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout android:id="@+id/container_known_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <!-- 1 /-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_last_connected_device"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:text="Some cool device"/>

                    <Button android:id="@+id/btn_connect_last"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/action_connect_last_device"/>
                </LinearLayout>






                <!-- 2 /-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#333333"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/prompt_check_known_devices"/>

                <Button android:id="@+id/btn_check_known"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/action_check_known_devices"/>





            </LinearLayout>

            <TextView android:id="@+id/txt_no_saved_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="48dp"
                android:paddingBottom="32dp"
                android:textColor="@color/text_red"
                android:textStyle="bold"
                android:text="@string/text_no_saved_devices"/>


            <!-- 3 /-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#333333"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/prompt_search_new_devices"/>

            <Button android:id="@+id/btn_search_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/action_search_new_devices"/>

        </LinearLayout>


        <!--  Container for children fragments /-->
        <FrameLayout
            android:id="@+id/children_fragments_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

    </FrameLayout>





</LinearLayout>
